Oshi integration, general rework